--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,9 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Push News</title>
-    <script src="dexie.js"></script>
-    <script src="databases.js"></script>
-    <script type="module" src="main.js"></script>
+    <script src="main.js"></script>
 </head>
 <body>
 Push News
